--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,35 +3,37 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Esta es la rama donde se hará el despliegue
+      - main
 
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-latest  # Usa Ubuntu para ejecutar el flujo de trabajo
+    runs-on: ubuntu-latest
 
     steps:
       # Paso 1: Checkout del código del repositorio
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      # Paso 2: Configurar Node.js en el entorno de GitHub Actions
+      # Paso 2: Configurar Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Usa la versión de Node.js que necesita tu proyecto
+          node-version: '20'
 
       # Paso 3: Instalar dependencias
       - name: Install dependencies
-        run: npm ci  # Instala las dependencias de tu proyecto
+        run: npm ci
 
       # Paso 4: Construir el proyecto
       - name: Build project
-        run: npm run build  # Genera los archivos estáticos en la carpeta 'dist/'
+        run: npm run build
 
-      # Paso 5: Desplegar los archivos generados en la carpeta 'dist/' a GitHub Pages
+      # Paso 5: Desplegar a GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          branch: gh-pages  # La rama donde se publicarán los archivos
-          folder: dist  # La carpeta que contiene los archivos estáticos generados
-          clean: true  # Limpiar la rama gh-pages antes de subir nuevos archivos
+          branch: gh-pages
+          folder: dist
+          clean: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
